--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,7 @@ body {
     background-image: url("../images/fondo.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     width: 100vw;
     height: 100vh;
 
@@ -58,7 +59,7 @@ body {
 
 #stats p {
     font-size: 40px;
-    background-color: brown;
+    background-color: #FF5f1f;
     padding: 10px;
     border-radius: 15px;
 }
@@ -68,9 +69,26 @@ body {
     border-radius: 15px;
  }
 
-/* Oculto vida, puntaje y game Over */
-/* #game-screen,
-*/
-#game-over-screen {
+.screenHidden {
     display: none;
+    padding: 20px;
+    border-radius: 16px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    flex-direction: column;
+    align-items: center;
 }
+.screenHidden img {
+  width: 60%;
+  height: 60%;
+}
+
+body button {
+    font-size: 20px;
+    background-color:#FF7c39;
+    color: #fff;
+    padding: 20px 40px;
+    border: 0;
+    box-shadow: 0;
+    border-radius: 5px;
+    margin-bottom: 20px;
+  }
