--- a/style/style.css
+++ b/style/style.css
@@ -8,12 +8,12 @@ body {
     overflow: hidden;
 }
 
+
+
 #start-screen {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: var(--primary);
-    color: var(--text-light);
     padding: 20px;
     border-radius: 16px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
@@ -63,11 +63,12 @@ body {
     padding: 10px;
     border-radius: 15px;
 }
-.plives{
+
+.plives {
     background-color: rgb(199, 205, 222);
     padding: 5px;
     border-radius: 15px;
- }
+}
 
 .screenHidden {
     display: none;
@@ -77,18 +78,25 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
 .screenHidden img {
-  width: 60%;
-  height: 60%;
+    width: 60%;
+    height: 60%;
 }
 
 body button {
     font-size: 20px;
-    background-color:#FF7c39;
+    background-color: #FF7c39;
     color: #fff;
     padding: 20px 40px;
     border: 0;
     box-shadow: 0;
     border-radius: 5px;
     margin-bottom: 20px;
-  }
+}
+
+body button:hover {
+    background-color: #FF5f1f;
+    transform: scale(1.1);
+    transition: 0.3s ease;
+}
