--- a/style/style.css
+++ b/style/style.css
@@ -8,8 +8,6 @@ body {
     overflow: hidden;
 }
 
-
-
 #start-screen {
     display: flex;
     flex-direction: column;
@@ -100,3 +98,33 @@ body button:hover {
     transform: scale(1.1);
     transition: 0.3s ease;
 }
+
+.level-message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    border-radius: 10px;
+    display: none; /* Se oculta al principio */
+  }
+
+  #you-win-screen {
+    display: none; /* Se oculta al principio */
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-radius: 16px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+#you-win-screen h1 {
+    font-size: 70px
+}
+#you-win-screen img {
+    width: 350px;
+}
+  
